@@ -1,3 +1,8 @@
+2006-08-08  Hendrik Tews  <tews@debian>
+
+	ELSA
+	* 'a annotation finished, regression test passed
+
 2006-08-08  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
 	AST
